fix site-brand overflow hidden

--- a/assets/scss/_custom/custom.scss
+++ b/assets/scss/_custom/custom.scss
@@ -217,6 +217,10 @@ span#inline-toc {
     font-family: 'home-poetry', 'Noto Serif SC', serif;
     font-size: 125%;
 }
+// 品牌栏自动隐藏
+.site-brand {
+    overflow: auto hidden;
+}
 @font-face {
     font-family: 'home-poetry';
     font-display: swap;
